# CUDA-BEC

./: ._imag3d-rms.txt  ._real3d-rms.txt  ._src  .clang-format  .clangd  CMakeLists.txt  CUDAARRAY_TEMPLATE_GUIDE.md  Doxyfile  Makefile  OLD-imag3d_gpu_times.txt  README.md  bench.txt  diffint-proba  diffint-proba.cu  extract_gpu_times.sh  extract_out_times.sh  imag3d-cuda  imag3d-mu.txt  imag3d-rms.txt  imag3d.sh  imag3d_out_times.txt  plot_benchmark.py  proba.txt  real3d-cuda  real3d-mu.txt  real3d-rms.txt  real3d_out_times.txt  run_imag3d_sweep.sh  run_imag_real3d_sweep.sh  run_mpi_sweep.pbs  sweep.sh  test_simpson_integrator  test_simpson_integrator.cu
1/: imag3d-mu.txt  imag3d-rms.txt  input
10/: imag3d-mu.txt  imag3d-rms.txt  input
OLD-range-N/: imag3d_gpu_times.txt
OLD-range-N/N128/: imag3d-rms.txt
OLD-range-N/N136/: imag3d-rms.txt
OLD-range-N/N144/: imag3d-rms.txt
OLD-range-N/N160/: imag3d-mu.txt
OLD-range-N/N168/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N184/: imag3d-rms.txt
OLD-range-N/N192/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N200/: imag3d-mu.txt
OLD-range-N/N216/: imag3d-mu.txt
OLD-range-N/N224/: imag3d-rms.txt
OLD-range-N/N232/: imag3d-mu.txt
OLD-range-N/N240/: imag3d-mu.txt
OLD-range-N/N256/: imag3d-rms.txt
OLD-range-N/N264/: imag3d-rms.txt
OLD-range-N/N272/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N280/: imag3d-rms.txt
OLD-range-N/N288/: imag3d-rms.txt
OLD-range-N/N296/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N304/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N312/: imag3d-mu.txt
OLD-range-N/N320/: imag3d-mu.txt
OLD-range-N/N328/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N336/: imag3d-mu.txt
OLD-range-N/N344/: imag3d-mu.txt  imag3d-rms.txt
OLD-range-N/N352/: imag3d-rms.txt
OLD-range-N/N368/: imag3d-mu.txt
OLD-range-N/N376/: imag3d-mu.txt
OLD-range-N/N400/: imag3d-mu.txt
OLD-range-N/N416/: imag3d-mu.txt  imag3d-rms.txt
cuda/: cuda.ncu-proj
docs/html/: ._index.html  CudaArray_8cpp.html  CudaArray_8cpp_source.html  CudaArray_8h.html  CudaArray_8h_source.html  _8__cfg_8cpp.html  _8__cfg_8cpp_source.html  _8__cfg_8h.html  _8__cfg_8h_source.html  _8__diffint_8cu.html  _8__diffint_8cu_source.html  _8__diffint_8cuh.html  _8__diffint_8cuh_source.html  _8__multiarray_8cpp.html  _8__multiarray_8cpp_source.html  _8__multiarray_8h.html  _8__multiarray_8h_source.html  _8__simpson3d__integrator_8cu.html  _8__simpson3d__integrator_8cu_source.html  _8__simpson3d__integrator_8hpp.html  _8__simpson3d__integrator_8hpp_source.html  _8__simpson3d__kernel_8cu.html  _8__simpson3d__kernel_8cu_source.html  _8__simpson3d__kernel_8cuh.html  _8__simpson3d__kernel_8cuh_source.html  annotated.html  cfg_8cpp.html  cfg_8cpp_source.html  cfg_8h.html  cfg_8h_source.html  classCudaArray3D-members.html  classCudaArray3D.html  classMultiArray-members.html  classMultiArray.html  classSimpson3DTiledIntegrator-members.html  classSimpson3DTiledIntegrator.html  classSimpson3DTiledIntegratorImpl-members.html  classSimpson3DTiledIntegratorImpl.html  classes.html  diffint_8cu.html  (+69 more)
docs/latex/: CudaArray_8cpp.tex  CudaArray_8cpp_source.tex  CudaArray_8h.tex  CudaArray_8h_source.tex  _8__cfg_8cpp.tex  _8__cfg_8cpp_source.tex  _8__cfg_8h.tex  _8__cfg_8h_source.tex  _8__diffint_8cu.tex  _8__diffint_8cu_source.tex  _8__diffint_8cuh.tex  _8__diffint_8cuh_source.tex  _8__multiarray_8cpp.tex  _8__multiarray_8cpp_source.tex  _8__multiarray_8h.tex  _8__multiarray_8h_source.tex  _8__simpson3d__integrator_8cu.tex  _8__simpson3d__integrator_8cu_source.tex  _8__simpson3d__integrator_8hpp.tex  _8__simpson3d__integrator_8hpp_source.tex  _8__simpson3d__kernel_8cu.tex  _8__simpson3d__kernel_8cu_source.tex  _8__simpson3d__kernel_8cuh.tex  _8__simpson3d__kernel_8cuh_source.tex  annotated.tex  cfg_8cpp.tex  cfg_8cpp_source.tex  cfg_8h.tex  cfg_8h_source.tex  classCudaArray3D.tex  classMultiArray.tex  classSimpson3DTiledIntegrator.tex  classSimpson3DTiledIntegratorImpl.tex  diffint_8cu.tex  diffint_8cu_source.tex  diffint_8cuh.tex  diffint_8cuh_source.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8ed8ec1d9d0ba5c1e987edd747892e8a.tex  (+33 more)
input/: imag3d-input  imag3d-input-bec  imag3d-input-droplet  imag3d-input-droplet-template  imag3d-input.bak.1764047451  real3d-input  real3d-input-bec  real3d-input-droplet  real3d-input.bak.1764047451
konacno-N/: imag3d_out_times.txt  sweep.sh
konacno-N/N128/: imag3d-rms.txt
konacno-N/N144/: imag3d-rms.txt
konacno-N/N160/: imag3d-rms.txt
konacno-N/N176/: imag3d-rms.txt
konacno-N/N192/: imag3d-rms.txt
konacno-N/N208/: imag3d-rms.txt
konacno-N/N224/: imag3d-rms.txt
konacno-N/N240/: imag3d-rms.txt
konacno-N/N256/: imag3d-rms.txt
konacno-N/N272/: imag3d-rms.txt
konacno-N/N288/: imag3d-rms.txt
konacno-N/N304/: imag3d-rms.txt
konacno-N/N320/: imag3d-rms.txt
konacno-N/N336/: imag3d-rms.txt
konacno-N/N352/: imag3d-rms.txt
konacno-N/N368/: imag3d-rms.txt
konacno-N/N384/: imag3d-rms.txt
konacno-N/N400/: imag3d-rms.txt
konacno-N/N416/: imag3d-rms.txt
novo-N/N128/: ._imag3d-rms.txt  imag3d-rms.txt
novo-N/N144/: imag3d-rms.txt
novo-N/N160/: imag3d-rms.txt
novo-N/N176/: imag3d-rms.txt
novo-N/N192/: imag3d-rms.txt
novo-N/N208/: imag3d-rms.txt
novo-N/N224/: imag3d-rms.txt
novo-N/N240/: imag3d-rms.txt
novo-N/N256/: imag3d-rms.txt
novo-N/N272/: imag3d-rms.txt
novo-N/N288/: imag3d-rms.txt
novo-N/N304/: imag3d-rms.txt
novo-N/N320/: imag3d-rms.txt
novo-N/N336/: imag3d-rms.txt
novo-N/N352/: imag3d-rms.txt
novo-N/N368/: imag3d-rms.txt
novo-N/N384/: imag3d-rms.txt
novo-N/N400/: imag3d-rms.txt
novo-N/N416/: imag3d-rms.txt
old-codes/: CudaArray.cpp  CudaArray.h  multiarray.cpp  multiarray.h  simpson3d_integrator.hpp  simpson3d_kernel.cu  simpson3d_kernel.cuh
output/output-bec/: imag3d-mu.txt  imag3d-rms.txt  real3d-mu.txt  real3d-rms.txt
output/output-droplet/: imag3d-mu.txt  imag3d-rms.txt  real3d-mu.txt  real3d-rms.txt
range-N/: extract_gpu_times.sh  imag3d_gpu_times.txt
range-N/N128/: imag3d-mu.txt  imag3d-rms.txt
(+210 files in other folders)
